--- a/src/main/resources/TeamsPage.fxml
+++ b/src/main/resources/TeamsPage.fxml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="682.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.TeamsController">
    <children>
-      <Button layoutX="430.0" layoutY="329.0" mnemonicParsing="false" onAction="#SwitchToHomePage" text="Back to Homepage">
+      <Button layoutX="507.0" layoutY="408.0" mnemonicParsing="false" onAction="#SwitchToHomePage" text="Back to Homepage">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
+      <TableView fx:id="TeamsTable" layoutX="199.0" layoutY="64.0" prefHeight="200.0" prefWidth="290.0">
+        <columns>
+          <TableColumn fx:id="TeamName" prefWidth="146.3999481201172" text="Team Name" />
+          <TableColumn fx:id="TeamId" prefWidth="143.20001220703125" text="ID" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <VBox alignment="CENTER" layoutX="3.0" layoutY="264.0" prefHeight="104.0" prefWidth="682.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+               <children>
+                  <TextField fx:id="textTeamName" promptText="TeamName" />
+                  <TextField fx:id="textTeamId" promptText="ID" />
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#btnInsert" text="Insert Team">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="20.0" />
+         </padding>
+      </VBox>
    </children>
 </AnchorPane>
