--- a/src/main/resources/TeamsPage.fxml
+++ b/src/main/resources/TeamsPage.fxml
@@ -5,40 +5,60 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="682.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.TeamsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.TeamsController">
    <children>
-      <Button layoutX="507.0" layoutY="408.0" mnemonicParsing="false" onAction="#SwitchToHomePage" text="Back to Homepage">
+      <Button layoutX="34.0" layoutY="28.0" mnemonicParsing="false" onAction="#SwitchToHomePage" text="&lt;" textAlignment="CENTER" textFill="#40404098" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <TableView fx:id="TeamsTable" editable="true" layoutX="170.0" layoutY="64.0" prefHeight="200.0" prefWidth="359.0">
-        <columns>
-          <TableColumn fx:id="TeamName" prefWidth="95.19999694824219" text="Team Name" />
-            <TableColumn fx:id="TeamCaptain" prefWidth="123.20001220703125" text="Captain " />
-            <TableColumn fx:id="TeamTotalScore" prefWidth="71.199951171875" text="Total Score" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <VBox alignment="CENTER" layoutX="3.0" layoutY="264.0" prefHeight="104.0" prefWidth="682.0">
+      <VBox alignment="CENTER" layoutX="59.0" layoutY="574.0" prefHeight="104.0" prefWidth="682.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="59.0" AnchorPane.rightAnchor="59.0">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                <children>
-                  <TextField fx:id="textTeamName" promptText="TeamName" />
-                  <TextField fx:id="textTeamCaptain" promptText="TeamCaptain" />
+                  <TextField fx:id="textTeamName" prefHeight="35.0" prefWidth="200.0" promptText="Team Name" />
+                  <TextField fx:id="textTeamCaptain" prefHeight="35.0" prefWidth="200.0" promptText="Team Captain" />
+                  <Button mnemonicParsing="false" onAction="#btnInsert" prefHeight="35.0" prefWidth="100.0" text="Insert Team">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Button>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#btnInsert" text="Insert Team">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
          </children>
          <padding>
             <Insets bottom="20.0" />
          </padding>
       </VBox>
+      <HBox alignment="CENTER" layoutX="50.0" layoutY="81.0" prefHeight="479.0" prefWidth="1180.0" spacing="100.0" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="81.0">
+         <children>
+            <TableView fx:id="TeamsTable" editable="true" prefHeight="350.0" prefWidth="550.0">
+              <columns>
+                <TableColumn fx:id="TeamName" prefWidth="95.19999694824219" text="Team Name" />
+                  <TableColumn fx:id="TeamCaptain" prefWidth="123.20001220703125" text="Captain " />
+                  <TableColumn fx:id="TeamTotalScore" prefWidth="71.199951171875" text="Total Score" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </TableView>
+            <TableView fx:id="PlayersTable" prefHeight="350.0" prefWidth="550.0">
+              <columns>
+                <TableColumn fx:id="PlayerName" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="PlayerAge" prefWidth="48.0" text="Age" />
+                  <TableColumn fx:id="PlayerBirthdate" prefWidth="118.0" text="Birthdate" />
+                  <TableColumn fx:id="PlayerPosition" prefWidth="76.0" text="Position" />
+                  <TableColumn fx:id="PlayerShirtNumber" prefWidth="115.0" text="Shirt Number" />
+                  <TableColumn fx:id="PlayerRank" prefWidth="57.0" text="Rank" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
