--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.SceneController">
    <children>
-      <Label layoutX="242.0" layoutY="33.0" text="Egyptain League">
+      <Label alignment="CENTER" layoutX="242.0" layoutY="33.0" text="Egyptian League" textAlignment="CENTER" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="48.0" />
          </font>
+         <effect>
+            <Glow level="0.7" />
+         </effect>
       </Label>
-      <Button layoutX="46.0" layoutY="136.0" mnemonicParsing="false" onAction="#SwitchToTeamsPage" text="Teams">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
+      <HBox alignment="CENTER" prefHeight="500.0" prefWidth="200.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="300.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#SwitchToTeamsPage" prefHeight="30.0" prefWidth="100.0" text="Teams">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
