--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.GUI.HomePageController">
    <children>
       <Label alignment="CENTER" layoutX="242.0" layoutY="33.0" text="Egyptian League" textAlignment="CENTER" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
          <font>
@@ -15,14 +15,19 @@
             <Glow level="0.7" />
          </effect>
       </Label>
-      <HBox alignment="CENTER" prefHeight="500.0" prefWidth="200.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="300.0">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="30.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="300.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#SwitchToTeamsPage" prefHeight="30.0" prefWidth="100.0" text="Teams">
+            <Button mnemonicParsing="false" onAction="#switchToTeamsPage" prefHeight="30.0" prefWidth="100.0" text="Teams">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Players">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
          </children>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
