--- a/src/main/resources/TeamsPage.fxml
+++ b/src/main/resources/TeamsPage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.TeamsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.GUI.TeamsController">
    <children>
       <Button layoutX="34.0" layoutY="28.0" mnemonicParsing="false" onAction="#switchToHomePage" text="&lt;" textAlignment="CENTER" textFill="#40404098" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
          <font>
