--- a/src/main/resources/MatchesPage.fxml
+++ b/src/main/resources/MatchesPage.fxml
@@ -6,21 +6,30 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.egyptian_league.GUI.MatchTableScene">
    <children>
-      <HBox alignment="CENTER" prefHeight="300.0" prefWidth="200.0" spacing="50.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="80.0">
+      <HBox alignment="CENTER" prefHeight="300.0" prefWidth="200.0" spacing="50.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="80.0">
          <children>
-            <TableView fx:id="tableView" editable="true" prefHeight="300.0" prefWidth="800.0">
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy></TableView>
-            <TableView fx:id="goalsTableView" editable="true" prefHeight="200.0" prefWidth="300.0">
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
+            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="800.0" spacing="30.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <TableView fx:id="tableView" editable="true" prefHeight="500.0" prefWidth="800.0">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <HBox fx:id="inputHBox" alignment="CENTER" prefHeight="100.0" prefWidth="800.0" spacing="10.0" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="300.0" prefWidth="400.0" spacing="30.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <TableView fx:id="goalsTableView" editable="true" prefHeight="500.0" prefWidth="300.0">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <HBox fx:id="goalsInputHBox" alignment="CENTER" prefHeight="100.0" prefWidth="300.0" spacing="10.0" />
+               </children>
+            </VBox>
          </children>
       </HBox>
-      <HBox fx:id="inputHBox" alignment="CENTER" prefHeight="100.0" prefWidth="800.0" spacing="10.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="60.0" />
-      <HBox fx:id="goalsInputHBox" alignment="CENTER" prefHeight="100.0" prefWidth="300.0" spacing="10.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="60.0" />
       <Button fx:id="backButton" mnemonicParsing="false" text="&lt;" textFill="#00000099" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font size="15.0" />
