--- a/src/main/resources/TeamsPage.fxml
+++ b/src/main/resources/TeamsPage.fxml
@@ -23,6 +23,7 @@
                         <Font size="13.0" />
                      </font>
                   </Button>
+                  <Button mnemonicParsing="false" onAction="#btnDelete" prefHeight="35.0" prefWidth="100.0" text="Delete" />
                </children>
             </HBox>
          </children>
