--- a/src/main/resources/PlayersPage.fxml
+++ b/src/main/resources/PlayersPage.fxml
@@ -20,5 +20,7 @@
             <Font size="15.0" />
          </font>
       </Button>
+      <TextField fx:id="searchBar" alignment="CENTER" promptText="Search Player" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="50.0" />
+      <VBox prefHeight="200.0" prefWidth="100.0" />
    </children>
 </AnchorPane>
