--- a/src/main/resources/TeamsPage.fxml
+++ b/src/main/resources/TeamsPage.fxml
@@ -26,6 +26,10 @@
                   <Button mnemonicParsing="false" onAction="#btnDelete" prefHeight="35.0" prefWidth="100.0" text="Delete" />
                </children>
             </HBox>
+            <TextField fx:id="searchBar" alignment="CENTER" prefWidth="100.0" promptText="Search Team">
+               <VBox.margin>
+                  <Insets left="300.0" right="300.0" />
+               </VBox.margin></TextField>
          </children>
          <padding>
             <Insets bottom="20.0" />
